# sedang-kkn

./: .env.example  .gitignore  README.md  credentials.json.example  locations.example.yaml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: daily-attendance.yml  proker-presensi-today.yml  proker-presensi.yml
docs/superpowers/plans/: 2026-07-02-edit-logbook-entries-plan.md
docs/superpowers/specs/: 2026-07-02-edit-logbook-entries-design.md
src/: actions.py  datatypes.py  main.py  oauth.py
src/ui/: prompt.py  tables.py  textual_table.py  tui.py
src/utils/: attendance.py  common.py  credentials.py  generative.py  group_report.py  kkn.py  oauth.py  proker_presensi.py  report.py  simaster.py
tests/: test_proker_presensi.py
